Se añadio etiqueta google

--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
   <link rel="stylesheet" href="web/assets/teample/css/estilos.css">
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-G80XG3PM0V"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-G80XG3PM0V');
+</script>
+
 <body>
   <!-- Inicio del navbar -->
   <nav id="navbar-example2" class="navbar navbar-light bg-light px-3">
@@ -62,25 +72,6 @@
                 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
                   Ver mas
                 </button>
-                <!-- Inicio de los Modales -->
-                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                  aria-hidden="true">
-                  <div class="modal-dialog">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                      </div>
-                      <div class="modal-body">
-                        ...
-                      </div>
-                      <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <!-- Fin de los Modales -->
               </div>
             </div>
             <br>
@@ -762,10 +753,29 @@
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d558.8700068742467!2d-92.9143484897475!3d17.996285330061802!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85edd840ae5699a7%3A0x229c08af4bd4f6a9!2zTWVyY2FkbyBQw7pibGljbyAnSm9zw6kgTWFyw61hIFBpbm8gU3XDoXJleic!5e0!3m2!1ses-419!2smx!4v1712601076723!5m2!1ses-419!2smx" width="1289" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
   </div>
+  <!-- Inicio de los Modales -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">San Judas tadeo</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Informacion de san judas tadeo
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Fin de los Modales -->
   <!-- Fin del container -->
 
   <!-- Optional JavaScript; choose one of the two! -->
-  <script src="web/assets/js/bootstrap.js"></script>
+  <script src="web/assets/js/bootstrap.bundle.js"></script>
   <script src="web/assets/teample/js/gotop.js"></script>
 
 
