--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <link rel="stylesheet" href="web/assets/css/bootstrap.css">
   <link rel="stylesheet" href="web/assets/teample/css/estilos.css">
   <link rel="stylesheet" href="web/assets/css/bootstrap-grid.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <!-- Google tag (gtag.js) -->
@@ -38,28 +39,39 @@
 </script>
 
 <body>
+
   <!-- Inicio del navbar -->
-  <nav id="navbar-example2" class="navbar navbar-light bg-light px-3">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <ul class="nav nav-pills">
-      <li class="nav-item">
-        <a class="nav-link" href="#Inicio">Inicio</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#Productos">Productos</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#Historia">Historia</a>
-      </li>
-    </ul>
+  <nav id="navbar-example2" class="navbar bg-body-tertiary" style="background-color: #e3f2fd;">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        <img src="/web/assets/img/logo.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+        La Abundancia
+      </a>
+      <ul class="nav nav-pills">
+        <li class="nav-item">
+          <a class="nav-link" href="#Inicio">Inicio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#Productos">Productos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#Historia">Historia</a>
+        </li>
+      </ul>
+    </div>
   </nav>
   <!-- Fin dek navbar -->
+
+  <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+    <div class="progress-bar" style="width: 100%"></div>
+  </div>
 
   <!-- Inicio del container -->
   <div class="container-sm">
     <div class="go-top-container">
       <div class="go-top-button">
-        <span style="font-size: 24px; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">&#9650;</span>
+        <span
+          style="font-size: 24px; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">&#9650;</span>
       </div>
     </div>
     <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" class="scrollspy-example"
@@ -153,7 +165,13 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-              Aquí puedes agregar más detalles del evento.
+              <ul class="list-group">
+                <li class="list-group-item">Informacion aqui</li>
+                <li class="list-group-item">Informacion aqui</li>
+                <li class="list-group-item">Informacion aqui</li>
+                <li class="list-group-item">Informacion aqui</li>
+                <li class="list-group-item">Informacion aqui</li>
+              </ul>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
@@ -434,15 +452,15 @@
   </div>
   <!-- Fin del container -->
 
-
-
   <!-- Optional JavaScript; choose one of the two! -->
   <script src="web/assets/js/bootstrap.bundle.js"></script>
   <script src="web/assets/teample/js/gotop.js"></script>
+  <script src="js/main.js"></script>
 </body>
 <footer class="footer fixed-bottom bg-dark text-light text-center">
   <div class="container">
     <span class="text-muted">© 2024 La Abundancia</span>
   </div>
 </footer>
+
 </html>
