--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <nav id="navbar-example2" class="navbar bg-body-tertiary" style="background-color: #e3f2fd;">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-        <img src="/web/assets/img/logo.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+        <img src="web/assets/img/logo.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
         La Abundancia
       </a>
       <ul class="nav nav-pills">
