actualizacion del index

--- a/index.html
+++ b/index.html
@@ -203,7 +203,10 @@
                 <div class="card" style="width: 18rem;">
                   <img src="web/assets/img/veladora1.jpg" class="card-img-top" alt="...">
                   <div class="card-body align-items-center">
-                    <h5 class="card-title">Ven a mi</h5>
+                    <h5 class="card-title">Ven a mi <span class="position-absolute top-0 start-100 translate-middle p-2 bg-danger border border-light rounded-circle">
+                      <span class="visually-hidden">New alerts</span>
+                    </span>
+                  </h5>
                     <p class="card-text">Este producto sirve ...</p>
                     <button type="button" class="btn btn-primary">
                       Ver mas
